--- a/style/style.css
+++ b/style/style.css
@@ -2,7 +2,9 @@
     /* height: 50vh; */
     /* width: 80vh; */
 }
-
+div ul li a{
+    /* text-decoration: none;
+} */
 
 nav{
     background-color: white;
@@ -40,14 +42,24 @@ font-weight: 500;}
     font-size: 50px;
 }
 h5{
-    border-bottom: 3px solid ;
+    border-bottom: 1px solid ;
     width: 25%;
 }
 .button:hover{color: black;
     background-color: #ED4C67;
-
 }
-
+footer{
+    background-color: #1B1464;
+    height: 70vh;
+    color: white;
+}
+input{
+    border: none;
+}
+ul a i {
+    /* text-decoration: none; */
+    color: white;
+}
 
 
 
